added a lot of stuff

--- a/index.html
+++ b/index.html
@@ -1,2 +1,52 @@
-<html><head></head>
-<body><p>this is a test!!!</p></body><body></body></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="the best website ever yes">
+        <title>Main Page</title>
+        <style>
+            @font-face {
+                font-family: "custom";
+                src: url("/fonts/i-fogror.ttf") format("truetype");
+            }
+
+            h1 {
+                font-family: "custom", Tahoma;
+                color: #6C91C2;
+            }
+
+            h2 {
+                font-family: "custom", Tahoma;
+                color: #6C91C2;
+            }
+
+            h3 {
+                font-family: "custom", Tahoma;
+                color: #6C91C2;
+            }
+
+            p {
+                font-family: "custom", Tahoma;
+                color: #49DCB1;
+            }
+
+            a {
+                font-family: "custom", Tahoma;
+                color: #DB2955;
+                font-size: larger;
+            }
+
+            body {
+                background-color: #000011;
+            }
+        </style>
+    <a href="home.html">Home</a>
+    <!-- <a href="ninetaxa.html">Ninetaxa</a> -->
+    <a href="jstest.html">Clicker Game</a>
+    </head>
+    <body>
+        <h1>Main Page</h1>
+        <p>This is a website for anything I find interesting. There isn't much as of right now, but I'm working on it!</p>
+        <a href="https://www.youtube.com/@FinnPlanetballs">My Youtube Channel</a>
+        <a href="https://fontstruct.com/fontstructions/show/2540197/i-fogror">Download This Font</a>    </body>
+</html>
