--- a/jstest.html
+++ b/jstest.html
@@ -75,7 +75,7 @@
                 font-size: 30px;
             }
     </style>
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <!-- <a href="ninetaxa.html">Ninetaxa</a> -->
     <a href="jstest.html">Clicker Game</a>
     <p>warning: this game does not save your progress because i have no idea what i'm doing lol</p>
