--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 background-color: #000011;
             }
         </style>
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <!-- <a href="ninetaxa.html">Ninetaxa</a> -->
     <a href="jstest.html">Clicker Game</a>
     </head>
