--- a/jstest.html
+++ b/jstest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jstest</title>
+    <title>Clicker Game</title>
     <style>
             @font-face {
                 font-family: "custom";
