--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="the best website ever yes">
-        <title>Main Page</title>
+        <title>Home</title>
         <style>
             @font-face {
                 font-family: "custom";
@@ -45,7 +45,7 @@
     <a href="jstest.html">Clicker Game</a>
     </head>
     <body>
-        <h1>Main Page</h1>
+        <h1>Home</h1>
         <p>This is a website for anything I find interesting. There isn't much as of right now, but I'm working on it!</p>
         <a href="https://www.youtube.com/@FinnPlanetballs">My Youtube Channel</a>
         <a href="https://fontstruct.com/fontstructions/show/2540197/i-fogror">Download This Font</a>    </body>
